# projetS5

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  arm_branch_other.c  arm_constants.h  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_instruction.c  arm_load_store.c  arm_load_store.h  arm_simulator  compil.sh  config.h  config.status  configure  decodeur_cond_shif.c  decodeur_cond_shift.c  decodeur_cond_shift.h  example6.s  load_store_test  load_store_test.c  memory.c  memory.h.gch  memory_test  memory_test.c  register_test.c  registers.c  registers.h  registers_test  registers_test.c  scanner.c  send_irq  testing.sh  util.h.gch
.deps/: arm.Po  arm_branch_other.Po  arm_constants.Po  arm_core.Po  arm_data_processing.Po  arm_exception.Po  arm_instruction.Po  arm_load_store.Po  arm_simulator.Po  csapp.Po  debug.Po  gdb_protocol.Po  memory.Po  memory_test.Po  registers.Po  scanner.Po  send_irq.Po  trace.Po  util.Po
Examples/: Makefile  Makefile.am  Makefile.in  example1  example2  example3  example4  example5.s  example6.s  example_Kirill_Load_Multiples  example_Kirill_Load_Multiples.s  example_Kirill_Load_Multiples_ldmda.s  example_Kirill_Load_Multiples_ldmdb.s  example_Kirill_Load_Multiples_ldmib.s  example_STMDA.s  example_STMDB.s  example_STMIA.s  example_STMIB.s  insertion_sort  test_add_adc.s  test_and_orr_eor.s  test_bic.s  test_cmn.s  test_cmp.s  test_mov.s  test_mvn.s  test_rsb_rsc.s  test_sub_sbc.s
Examples/.deps/: insertion_sort.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
